jobber-k8s/1-gateway/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobber-gateway
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobber-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25% 
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: jobber-gateway
    spec:
      serviceAccountName: jobber-secret-reader
      containers:
      - name: jobber-gateway
        image: jasmeetsingh94/jobber-gateway
        imagePullPolicy: Always
        resources:
          limits:
            cpu: '0.5'
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 150Mi
        ports:
        - name: gateway
          containerPort: 4000
        volumeMounts:
          - name: secrets-store
            mountPath: /mnt/secrets-store
            readOnly: true  
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: jobber-aws-secrets
