jobber-k8s/1-gateway/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-gateway
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: jobber-gateway
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: jobber-frontend
      ports:
        - protocol: TCP
          port: 4000
